--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "name": "merge-release",
-  "version": "0.0.0-dev",
+  "name": "gh-action-bump-version",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "standard"
   },
   "bin": {
-    "merge-release": "./merge-release-run.js"
+    "gh-action-bump-version": "./gh-action-bump-version-run.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mikeal/auto-release.git"
+    "url": "git+https://github.com/phips28/gh-action-bump-version.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mikeal/auto-release/issues"
+    "url": "https://github.com/phips28/gh-action-bump-version/issues"
   },
-  "homepage": "https://github.com/mikeal/auto-release#readme",
+  "homepage": "https://github.com/phips28/gh-action-bump-version#readme",
   "dependencies": {
-    "bent": "1.5.13",
-    "simple-git": "^1.113.0",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
