--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: gh-action-bump-version
+name: Automated Version Bump
 description: Automated version bump for npm packages.
 runs:
   using: docker
