--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: "Checkout source code"
         uses: "actions/checkout@v1"
+        with:
+          ref: ${{ github.ref }}
       - name: "Setup Node.js"
         uses: "actions/setup-node@v1"
         with:
