--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,6 +15,8 @@ jobs:
         uses: "actions/checkout@v1"
         with:
           ref: ${{ github.ref }}
+      - name: "cat package.json"
+        run: cat ./package.json
       - name: "Setup Node.js"
         uses: "actions/setup-node@v1"
         with:
@@ -23,3 +25,5 @@ jobs:
         uses: "phips28/gh-action-bump-version@master"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: "cat package.json"
+        run: cat ./package.json
