--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@actions/core": "^1.2.0",
     "actions-toolkit": "^2.2.0",
     "yargs": "^14.2.0"
   },
