--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,7 +3,7 @@ name: "Bump Version"
 on:
   push:
     branches:
-      - "master"
+      - "checkout_v2"
 
 jobs:
   bump-version:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: "Checkout source code"
-        uses: "actions/checkout@v1"
+        uses: "actions/checkout@v2"
         with:
           ref: ${{ github.ref }}
       - name: "cat package.json"
