Custom package.json dir documented

--- a/action.yml
+++ b/action.yml
@@ -11,3 +11,7 @@ inputs:
     description: 'Prefix that is used for the git tag'
     default: ''
     required: false
+  PACKAGEJSON_DIR:
+    description: 'Custom dir to the package'
+    default: ''
+    required: false
