--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,14 @@ inputs:
     description: 'Prefix that is used for the git tag'
     default: ''
     required: false
+  minor-wording:
+    description: 'Words list that trigger a minor version bump'
+    default: 'feat,minor'
+    required: false
+  major-wording:
+    description: 'Words list that trigger a major version bump'
+    default: 'BREAKING CHANGE,major'
+    required: false
   PACKAGEJSON_DIR:
     description: 'Custom dir to the package'
     default: ''
