--- a/action.yml
+++ b/action.yml
@@ -31,6 +31,10 @@ inputs:
     description: 'Custom dir to the package'
     default: ''
     required: false
+  branch:
+    description: 'A separate branch to perform the version bump on'
+    default: ''
+    required: false
   default:
     description: 'Set a default version bump to use'
     default: 'patch'
