--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,10 @@ inputs:
     description: 'Set a custom commit message for version bump commit'
     default: ''
     required: false
+  tag-commit-message:
+    description: 'Set a custom commit message for tag commit'
+    default: ''
+    required: false
 outputs:
   newTag:
     description: 'The newly created tag'
