--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -27,7 +27,7 @@ jobs:
         id: version-bump
         uses: 'phips28/gh-action-bump-version@test/tag-prefix'
         with:
-          tag-prefix: ''
+          tag-prefix: 'v'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: 'cat package.json'
