--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -25,9 +25,9 @@ jobs:
           node-version: 12
       - name: "Automated Version Bump"
         id: version-bump
-        uses: "cmario92/gh-action-bump-version@master"
+        uses: "phips28/gh-action-bump-version@test/cmario92"
         with:
-          tag-prefix: 'v'
+          tag-prefix: 'x'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: "cat package.json"
