--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ inputs:
     description: 'Words list that trigger a patch version bump'
     required: false
   rc-wording:
-    description: 'Words list that trigger a patch version bump'
+    description: 'Words list that trigger a rc version bump'
     default: 'pre-alpha,pre-beta,pre-rc'
     required: false
   skip-tag:
