--- a/action.yml
+++ b/action.yml
@@ -50,6 +50,10 @@ inputs:
     description: 'Set a custom commit message for version bump commit'
     default: ''
     required: false
+  push:
+    description: 'Set to false to skip pushing the new tag'
+    default: 'true'
+    required: false
 outputs:
   newTag:
     description: 'The newly created tag'
