removed runtime dependencies

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -3,39 +3,12 @@ name: 'Bump Version'
 on:
   push:
     branches:
-      - 'master'
+      - 'remove-dependencies'
 
 jobs:
-  generate-bundle:
-    name: 'Generate bundle'
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: 'Checkout source code'
-        uses: 'actions/checkout@v2'
-        with:
-          ref: ${{ github.ref }}
-      - name: 'Setup Node.js'
-        uses: 'actions/setup-node@v1'
-        with:
-          node-version: 12
-      - name: 'generate bundle'
-        run: |
-          npm ci
-          npm run build
-          git config user.name "Automated Version Bump"
-          git config user.email "gh-action-bump-version@users.noreply.github.com"
-          git add dist -f
-          if [ $(git status --porcelain=v1 2>/dev/null | wc -l) -gt 0 ]
-          then
-            git commit -m "ci: generate bundle"
-            git push
-          fi
-
   bump-version:
     name: 'Bump Version on master'
     runs-on: ubuntu-latest
-    needs: generate-bundle
 
     steps:
       - name: 'Checkout source code'
@@ -46,7 +19,7 @@ jobs:
         run: cat ./package.json
       - name: 'Automated Version Bump'
         id: version-bump
-        uses: 'phips28/gh-action-bump-version@master'
+        uses: 'melody-universe/gh-action-bump-version@remove-dependencies'
         with:
           tag-prefix: 'v'
         env:
