--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: Automated Version Bump
 description: Automated version bump for npm packages.
 runs:
   using: node12
-  main: dist/main.js
+  main: index.js
 branding:
   icon: chevron-up
   color: blue
