--- a/package.json
+++ b/package.json
@@ -16,19 +16,12 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
-    "test": "jest",
-    "build": "webpack"
+    "test": "jest"
   },
-  "dependencies": {
-    "execa": "^5.1.1",
-    "signale": "^1.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "jest": "^25.2.7",
     "standard": "^14.3.3",
-    "prettier": "^2.3.0",
-    "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "prettier": "^2.3.0"
   }
 }
