installed dependencies to make it easier to merge end-to-end-tests

--- a/package.json
+++ b/package.json
@@ -20,8 +20,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jest": "^25.2.7",
+    "@types/jest": "^27.0.1",
+    "dotenv": "^10.0.0",
+    "execa": "^5.1.1",
+    "jest": "^25.5.4",
+    "js-yaml": "^4.1.0",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.3.0",
     "standard": "^14.3.3",
-    "prettier": "^2.3.0"
+    "tiny-glob": "^0.2.9"
   }
 }
