--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,15 +6,15 @@ on:
 concurrency: end-to-end-test
 
 jobs:
-  end-to-end-tests:
-    name: Conduct end-to-end tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: npm ci
-        name: Install dependencies
-      - run: npm run end-to-end-test
-        env:
-          TEST_REPO: ${{ secrets.TEST_REPO }}
-          TEST_USER: ${{ secrets.TEST_USER }}
-          TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
+#  end-to-end-tests:
+#    name: Conduct end-to-end tests
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - run: npm ci
+#        name: Install dependencies
+#      - run: npm run end-to-end-test
+#        env:
+#          TEST_REPO: ${{ secrets.TEST_REPO }}
+#          TEST_USER: ${{ secrets.TEST_USER }}
+#          TEST_TOKEN: ${{ secrets.TEST_TOKEN }}
