--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "dependencies": {
     "actions-toolkit": "^2.2.0",
+    "git-log-parser": "^1.2.0",
+    "through2": "^4.0.2",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
