Allow updating npm lockfile v2 with the new version

--- a/action.yml
+++ b/action.yml
@@ -54,6 +54,10 @@ inputs:
     description: 'Set to false to skip pushing the new tag'
     default: 'true'
     required: false
+  bump_package-lock:
+    description: 'Set to false to skip bumping version in lockfile version 2'
+    default: 'true'
+    required: false
 outputs:
   newTag:
     description: 'The newly created tag'
