example.env has all currently known fields. Working on descriptions

--- a/example.env
+++ b/example.env
@@ -1,1 +1,21 @@
+GITHUB_ACTOR
+GITHUB_EMAIL
+GITHUB_EVENT_PATH
+GITHUB_HEAD_REF
+GITHUB_REF
+GITHUB_REPOSITORY
+GITHUB_TOKEN
+GITHUB_USER
+GITHUB_WORKSPACE
+INPUT_COMMIT-MESSAGE
+INPUT_DEFAULT
+INPUT_MAJOR-WORDING
+INPUT_MINOR-WORDING
+INPUT_PATCH-WORDING
+INPUT_PREID
+INPUT_PUSH
+INPUT_RC-WORDING
+INPUT_SKIP-TAG
+INPUT_TAG-PREFIX
 INPUT_TARGET-BRANCH
+PACKAGEJSON_DIR
