added option to skip commit after a bump

--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,10 @@ inputs:
     description: 'Avoid to add a TAG to the version update commit'
     default: 'false'
     required: false
+  skip-commit:
+    description: 'Avoid to add a commit after the version is bumped'
+    default: 'false'
+    required: false
   PACKAGEJSON_DIR:
     description: 'Custom dir to the package'
     default: ''
