--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,7 +19,8 @@ jobs:
         run: cat ./package.json
       - name: 'Automated Version Bump'
         id: version-bump
-        uses: 'phips28/gh-action-bump-version@master'
+        # uses: 'phips28/gh-action-bump-version@master'
+        uses: 'thxmxx/gh-action-bump-version@master'
         with:
           tag-prefix: 'v'
         env:
