--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,10 @@ inputs:
     description: 'Prefix that is used for the git tag'
     default: ''
     required: false
+  tag-suffix:
+    description: 'Suffix that is used for the git tag'
+    default: ''
+    required: false
   version-type:
     description: 'Overrides version type from commit message'
     default: ''
