--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ inputs:
     required: false
   skip-push:
     description: 'If true, skip pushing any commits or tags created after the version bump'
-    default: false
+    default: 'false'
     required: false
   PACKAGEJSON_DIR:
     description: 'Custom dir to the package'
