--- a/action.yml
+++ b/action.yml
@@ -74,6 +74,10 @@ inputs:
     description: 'Check only last commit message'
     default: 'false'
     required: false
+  custom-git-domain:
+    description: 'Set a custom domain of the git instance'
+    default: 'github.com'
+    required: false
   push:
     description: '[DEPRECATED] Set to false to skip pushing the new tag'
     default: 'true'
