--- a/action.yml
+++ b/action.yml
@@ -78,6 +78,10 @@ inputs:
     description: 'Set a custom domain of the git instance'
     default: 'github.com'
     required: false
+  git-no-verify:
+    description: 'Skip precommit hooks'
+    default: 'false'
+    required: false
   push:
     description: '[DEPRECATED] Set to false to skip pushing the new tag'
     default: 'true'
